# akshaya-lang

./: aks_engine.py  pyproject.toml  setup.py
aks/: ast.py  context.py  environment.py  errors.py  execution_context.py  interpreter.py  interpreter_patched.py  lexer.py  memory.py  parser.py  reader.py  runtime.py  stdlib.py  tokens.py  types.py
akshayalang/: cli.py  repl.py
akshayalang.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
akshayalang/cli_utils/: reader.py
docs/: aks-spec.md  structure.md
examples/: dream_patch.aks  mirror_state.aks
tests/: test_integration.py  test_lexer.py  test_parser.py  test_runtime.py  test_stdlib.py
