[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "akshayalang"
version = "1.0.0"
description = "AkshayaLang — a sovereign symbolic programming language"
authors = [
  { name = "D.V.S. Siva Chandra Raju" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.7"

[project.scripts]
aks = "akshayalang.repl:start_repl"